--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: search_points
 description: A starting point for Dart libraries or applications.
 version: 1.0.0
-repository: https://github.com/my_org/my_repo
+repository: https://github.com/Tursunali008/search_points
 
 environment:
   sdk: ^3.4.4
